Fixed extra space issues and with help started the pop up

--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@ body
 #sky
 {
     width: 100%;
+    max-width: 100%;
     height: 100;
+    z-index: -2;
+    overflow-x: clip;
 }
 #sky :nth-child(1)
 {
@@ -57,6 +60,7 @@ body
 {
     background-repeat: no-repeat;
     background-size: 100%;
+    z-index: -2;
 }
 @keyframes clouds {
     0% {
@@ -73,6 +77,7 @@ body
     display: flex;
     justify-content: space-evenly;
     margin-top: 50;
+    z-index: 2;
 }
 
 .box
@@ -273,30 +278,46 @@ body
 #ground
 {
     width: 100%;
-    height: 100;
+    height: 100%;
     margin-bottom: 0;
     background-image: 
-    linear-gradient(#3f9b0b, #9e3333);
+    linear-gradient(#3f9b0b, #9e3333, #9e3333, #9e3333, #9e3333, #9e3333, #9e3333, #9e3333, #9e3333);
 }
-#text
+#modal-fact
 {
-    margin-top: 0;
-    background-color: #9e3333;
-    max-width: 300;
-
-}
-#text-background
-{
-    margin-top: 0;
-    background-color: #9e3333;
-    width: 100%;
-    height: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    width: 80vw;
+    background-color: #ffc18c;
+    z-index: 10;
+    position: fixed;
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    align-self: center;
+    border-radius: 3%;
+    transform: translateY(-50%);
+
+    opacity: 0;
+    z-index: 20;
+    padding: 2rem;
 }
-.grass
+#modal-fact.visable
 {
-    width: 10;
-    min-height: 10;
-    background-color: #3f9b0b;
+    opacity: 1;
+}
+#exit-fact
+{
+    width: 50;
+    height: 20;
+}
+#model-inner
+{
+    top: 0;
+}
+h2
+{
+    margin-top: 0;
+    text-align: center;
 }
